[tool.poetry]
name = "covid-navigator"
version = "0.1.0"
description = ""
authors = ["oli <ostrong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
langid = "^1.1.6"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
